--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
     "version": 2,
     "builds": [
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
       {
-        "src": "index.html",
-        "use": "@vercel/node"
+        "src": "tailwind.config.js",
+        "use": "@vercel/static-build"
       }
     ],
     "routes": [
@@ -14,3 +18,4 @@
     ],
     "buildCommand": "npx tailwindcss -i ./src/input.css -o ./public/stylesheets/output.css"
   }
+  
